<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Actitivity title strings-->
    <string name="title_login">Log In</string>
    <string name="title_sign_up">Sign Up</string>

    <!-- Common strings  -->
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <!-- Inputs strings -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password confirmation</string>

    <!-- Login activity strings -->
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don`t have an account?</string>
    <string name="login_with">Login with:</string>

</resources>